# cross-stitch-tasks

./: Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: makefile.yml
src/cross_stitch_tasks/: env_vars.py  settings.py
src/cross_stitch_tasks/alembic/: README  env.py
src/cross_stitch_tasks/alembic/versions/: 001_init.py  b241ea6081ac_init.py
src/cross_stitch_tasks/api/: app.py  config.py  data_base_helper.py  errors.py  run.py
src/cross_stitch_tasks/api/models/: __init__.py  base_model.py  cross_stitch.py  jobs.py  processes.py  type_of_base.py  type_of_image.py
src/cross_stitch_tasks/api/templates/: base.html  image_form.html  image_list.html  index.html  job_list.html  jobs_form.html  processes_form.html  type_form.html  type_list.html
src/cross_stitch_tasks/api/views/: delete_object.py  jobs_form.py  processes_form.py  start.py  type_of_base_form.py  type_of_image_form.py  urls.py
tests/: base_test.py  test_common.py
